[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Graphics/Menu/Menu_Background.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/StartMenuScreen.gd" type="Script" id=3]
[ext_resource path="res://Resources/Graphics/Menu/title.png" type="Texture" id=4]
[ext_resource path="res://Resources/Shaders/OneBit.tres" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )

[node name="StartMenuScreen" type="TextureRect"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 250 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -140.0
margin_right = 743.0
margin_bottom = 760.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/margin_right = 0
custom_constants/margin_top = 160
custom_constants/margin_left = 0
custom_constants/margin_bottom = -200
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 160.0
margin_right = 992.0
margin_bottom = 1254.0

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 1 )
margin_right = 992.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "New Game"
expand_icon = true

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 2 )
margin_top = 183.0
margin_right = 992.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
disabled = true
text = "Restart Campaign"
expand_icon = true

[node name="ChapterButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 3 )
margin_top = 366.0
margin_right = 992.0
margin_bottom = 545.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Select Chapter"
expand_icon = true

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 4 )
margin_top = 549.0
margin_right = 992.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Credits"
expand_icon = true

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 5 )
margin_top = 732.0
margin_right = 992.0
margin_bottom = 911.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource( 6 )
margin_top = 915.0
margin_right = 992.0
margin_bottom = 1094.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ChapterButton" to="." method="_on_ChapterButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
